# SafeRoute_AI

./: README.md  construcion_grafo.py  main.py  main_pre.py  pyproject.toml  requirements.txt
Bases_datos_proy5/Afluencia/: afluencia_desglosada_cb_12_2025.csv  afluencia_desglosada_tl_12_2025.csv  afluencia_desglosada_trolebus_12_2025.csv  afluenciamb_desglosado_12_2025.csv  afluenciartp_desglosado_12_2025.csv
Bases_datos_proy5/Resultados/: DB_afluencia.parquet
IPYNB_proyecto5/: Base_Principal.ipynb  Clima.ipynb
saferoute-ia/: main.py  pyproject.toml
